--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <img src="images/adam.jpg" alt="adam">
     <img src="images/avi.jpg" alt="Avi">
-    <img src="images/spencer.jpg" alt="Spencer" target="blank">
+    <img src="images/spencer.jpg" alt="Spencer">
 
   </body>
 </html>
